--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Materialize Colors in Bootstrap<title>
+    <title>Materialize Colors in Bootstrap</title>
 </head>
 
 <body class="container-fluid">
