--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="container-fluid">
 <nav class="navbar fixed-bottom navbar-light bg-transparent mr-auto">
     <div class="ml-auto animated tada">
-        <a href="https://drive.google.com/file/d/1Y0AlrxFZFZNhfZltFVIf_-xZx1Jr-nSS/view?usp=sharing" class="btn btn-lg btn-light border-secondary shadow shadow-lg"><i
+        <a href="https://github.com/matheustx/materialize-colors-in-bootstrap/blob/master/materialize-colors-in-bootstrap.rar?raw=true" class="btn btn-lg btn-light border-secondary shadow shadow-lg"><i
                 class="fas fa-cloud-download-alt"></i> Download</a>
     </div>
 </nav>
