--- a/index.html
+++ b/index.html
@@ -11,17 +11,23 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
     crossorigin="anonymous">
 <link rel="stylesheet" href="css/animate.css">
+<link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="css/style.css">
 <title>Materialize Colors in Bootstrap</title>
 </head>
 
-<body class="container-fluid">
-<nav class="navbar fixed-bottom navbar-light bg-transparent mr-auto">
-    <div class="ml-auto animated tada">
-        <a href="https://github.com/matheustx/materialize-colors-in-bootstrap/blob/master/materialize-colors-in-bootstrap.rar?raw=true" class="btn btn-lg btn-light border-secondary shadow shadow-lg"><i
+<body class="bg-amber">
+<div class="jumbotron bg-transparent">
+    <h1 class="display-2 animated bounce text-light"><i class="fas fa-fill-drip"></i> Materialize Colors in Bootstrap</h1>
+    <p class="lead">Use the color diversity of Materialize CSS within Bootstrap for your front-end projects.</p>
+    <hr class="my-2">
+    <p class="lead">
+            <a href="https://github.com/matheustx/materialize-colors-in-bootstrap/blob/master/materialize-colors-in-bootstrap.rar?raw=true" class="btn btn-lg btn-brown-darken-4
+            shadow" target="_blank"><i
                 class="fas fa-cloud-download-alt"></i> Download</a>
-    </div>
-</nav>
+    </p>
+</div>
+<main class="container-fluid">
 <section class="row">
     <!--RED-->
     <div class="col-sm-12 col-md-4 col-lg-3 py-5 bg-red-lighten-5 text-center">
@@ -832,6 +838,7 @@
         blue-grey-darken-1
     </div>
 </section>
+</main>    
 </body>
 
 </html>
