--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="bg-amber">
 <div class="jumbotron bg-transparent">
     <h1 class="display-1 animated bounce text-light d-none d-lg-block d-print-block"><i class="fas fa-fill-drip"></i> Materialize Colors in Bootstrap</h1>
-    <h1 class="display-4 animated bounce text-light d-sm-block"><i class="fas fa-fill-drip"></i> Materialize Colors in Bootstrap</h1>
+    <h1 class="display-4 animated bounce text-light d-sm-block d-lg-none"><i class="fas fa-fill-drip"></i> Materialize Colors in Bootstrap</h1>
     <p class="lead">Use the color diversity of Materialize CSS within Bootstrap for your front-end projects.</p>
     <hr class="my-2">
     <p class="lead">
